# conversational-ai-context-management

./: .gitignore  Dockerfile  README.md  SEMANTIC_MEMORY_FIX_STATUS.md  docker-compose.yml  memory_test_results.json  memory_test_results_1766657291.json  memory_test_results_1766658376.json  pyproject.toml
app/: __init__.py  conversation_service.py
app/api/: health.py
app/core/: config.py  dependencies.py  exceptions.py
app/models/: constraints.py  conversation.py  memory.py  response.py
app/monitoring/: __init__.py  metrics.py
app/services/: __init__.py  constraint_manager.py  context_compressor.py  database.py  embedding.py  health.py  llm.py  memory_manager.py  semantic_memory.py  token_manager.py
docker/postgres/: constraints_migration.sql  init.sql
docs/: architecture.md  guides.md
frontend/: README.md
frontend/app/: page.tsx
frontend/components/: ChatInterface.tsx  MemoryPanel.tsx  MetricsPanel.tsx  SummariesPanel.tsx
frontend/lib/: api.ts
scripts/: debug_semantic.py  test_api.py  test_memory_retention.py  test_qdrant_api.py  test_semantic_memory.ps1  verify_fix.py
